--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "packageManager": "pnpm@10.11.1",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "prettier": "^3.5.3",
     "vite": "^6.3.5"
   },
   "dependencies": {
